--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@astrojs/check": "^0.5.8",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
