--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.32.0",
